# paranucker

./: .gitignore  .gitlab-ci.yml  Makefile  Makefile.am  README.md  README.ru.md  build.sh  configure.ac  err.txt  test.sh
ci/: install.sh
examples/: cexample.c  cexample.sh  cppexample.sh  cxxexample.cpp  cxxexample.sh
scripts/: addfile.py
src/: Makefile.am  Makefile.files  command.h  includes.h  localconsts.h  logger.cpp  logger.h  nodesmap.h  plugin.cpp  plugin.h  stringutils.cpp  stringutils.h
src/analysis/: analysis.cpp  analysis.h  checks.cpp  checks.h  collections.cpp  collections.h  cst.cpp  cst.h  declaration.cpp  declaration.h  expression.cpp  expression.h  function.cpp  function.h  ref.cpp  ref.h  reports.cpp  reports.h  statement.cpp  statement.h  varitem.h  walkitem.h
src/custom/: fixed-cp-tree.h
src/includes/: nodeincludes.h  nodeshandling.inc  parserdefines.inc  parserincludes.h
src/nodes/: blocknode.h  constructor.h  create.h  declnode.h  errormark.h  function_decl.h  function_type.h  functiondecl.h  functiondeclnode.h  functiontype.h  functiontypenode.h  handler.h  identifier.h  integer_type.h  integercstnode.h  integertype.h  integertypenode.h  node.h  parm_decl.h  parmdecl.h  parmdeclnode.h  pointertypenode.h  resultdeclnode.h  returnexpr.h  returnexprnode.h  statement_list.h  statementlistnode.h  targetoption.h  templateparmindex.h  templatetypeparm.h  treelist.h  treelistnode.h  typedeclnode.h  typenode.h  voidtype.h  voidtypenode.h
src/nodes/base/: cst.h  cstnode.h  decl.h  declnode.h  expr.h  node.cpp  node.h  ref.h  stmt.h  type.h  typenode.h  vec.h
src/nodes/block/: ehspec_block.h  try_block.h
src/nodes/cst/: integer_cst.h  ptrmem_cst.h  real_cst.h  string_cst.h  vector_cst.h  void_cst.h
src/nodes/decl/: const_decl.h  field_decl.h  function_decl.h  label_decl.h  parm_decl.h  result_decl.h  template_decl.h  type_decl.h  using_decl.h  var_decl.h
src/nodes/expr/: abs_expr.h  addr_expr.h  aggrinit_expr.h  asm_expr.h  bind_expr.h  bitand_expr.h  bitior_expr.h  bitnot_expr.h  bitxor_expr.h  call_expr.h  caselabel_expr.h  cast_expr.h  ceildiv_expr.h  ceilmod_expr.h  cleanuppoint_expr.h  component_ref.h  compound_expr.h  cond_expr.h  convert_expr.h  decl_expr.h  emptyclass_expr.h  eq_expr.h  exactdiv_expr.h  exit_expr.h  fixtrunc_expr.h  float_expr.h  floordiv_expr.h  floormod_expr.h  ge_expr.h  goto_expr.h  gt_expr.h  indirect_ref.h  init_expr.h  label_expr.h  le_expr.h  loop_expr.h  lrotate_expr.h  lshift_expr.h  lt_expr.h  max_expr.h  (+40 more)
src/nodes/list/: statement_list.h  tree_list.h
src/nodes/ref/: array_ref.h  bitfield_ref.h  component_ref.h  indirect_ref.h  objtype_ref.h  scope_ref.h
src/nodes/stmt/: break_stmt.h  cleanup_stmt.h  continue_stmt.h  do_stmt.h  expr_stmt.h  for_stmt.h  if_stmt.h  switch_stmt.h  while_stmt.h
src/nodes/type/: array_type.h  boolean_type.h  enumeral_type.h  function_type.h  integer_type.h  method_type.h  nullptr_type.h  pointer_type.h  real_type.h  record_type.h  reference_type.h  typename_type.h  union_type.h  vector_type.h  void_type.h
src/nodes/vec/: tree_vec.h
src/parsers/: blocknode.cpp  constructor.cpp  declnode.cpp  declnode.h  errormark.cpp  function_decl.cpp  function_decl.h  function_type.cpp  function_type.h  functiondeclnode.cpp  functiondeclnode.h  functiontypenode.cpp  functiontypenode.h  generic.cpp  generic.h  handler.cpp  identifier_node.cpp  integer_cst.cpp  integer_type.cpp  parm_decl.cpp  parserincludes.h  pointer_type.cpp  result_decl.cpp  result_decl.h  resultdeclnode.cpp  resultdeclnode.h  return_expr.cpp  statement_list.cpp  targetoption.cpp  templateparmindex.cpp  templatetypeparm.cpp  tree_list.cpp  type_decl.cpp  type_decl.h  typenode.cpp  typenode.h  void_type.cpp  void_type.h
src/parsers/base/: decl.cpp  decl.h  expr.cpp  expr.h  ref.cpp  ref.h  stmt.cpp  stmt.h  type.cpp  type.h  vec.cpp  vec.h
src/parsers/block/: ehspec_block.cpp  try_block.cpp
src/parsers/cst/: integer_cst.cpp  ptrmem_cst.cpp  real_cst.cpp  string_cst.cpp  vector_cst.cpp  void_cst.cpp
src/parsers/decl/: const_decl.cpp  field_decl.cpp  function_decl.cpp  label_decl.cpp  parm_decl.cpp  result_decl.cpp  template_decl.cpp  type_decl.cpp  using_decl.cpp  var_decl.cpp
src/parsers/expr/: abs_expr.cpp  addr_expr.cpp  aggrinit_expr.cpp  asm_expr.cpp  bind_expr.cpp  bitand_expr.cpp  bitior_expr.cpp  bitnot_expr.cpp  bitxor_expr.cpp  call_expr.cpp  caselabel_expr.cpp  cast_expr.cpp  ceildiv_expr.cpp  ceilmod_expr.cpp  cleanuppoint_expr.cpp  component_ref.cpp  compound_expr.cpp  cond_expr.cpp  convert_expr.cpp  decl_expr.cpp  emptyclass_expr.cpp  eq_expr.cpp  exactdiv_expr.cpp  exit_expr.cpp  fixtrunc_expr.cpp  float_expr.cpp  floordiv_expr.cpp  floormod_expr.cpp  ge_expr.cpp  goto_expr.cpp  gt_expr.cpp  indirect_ref.cpp  init_expr.cpp  label_expr.cpp  le_expr.cpp  loop_expr.cpp  lrotate_expr.cpp  lshift_expr.cpp  lt_expr.cpp  max_expr.cpp  (+40 more)
src/parsers/list/: statement_list.cpp  tree_list.cpp
src/parsers/ref/: array_ref.cpp  bitfield_ref.cpp  component_ref.cpp  indirect_ref.cpp  objtype_ref.cpp  scope_ref.cpp
src/parsers/stmt/: break_stmt.cpp  cleanup_stmt.cpp  continue_stmt.cpp  do_stmt.cpp  expr_stmt.cpp  for_stmt.cpp  if_stmt.cpp  switch_stmt.cpp  while_stmt.cpp
src/parsers/type/: array_type.cpp  boolean_type.cpp  enumeral_type.cpp  function_type.cpp  integer_type.cpp  method_type.cpp  nullptr_type.cpp  pointer_type.cpp  real_type.cpp  record_type.cpp  reference_type.cpp  typename_type.cpp  union_type.cpp  vector_type.cpp  void_type.cpp
src/parsers/vec/: tree_vec.cpp
test/: Makefile  crashtest01-01.txt  crashtest02-01.txt  crashtest03-01.txt  crashtest03.h  crashtest04.cpp  crashtest1-01.txt  crashtest1.h  crashtest2-01.txt  crashtest3-01.txt  crashtest4-01.txt  test01-01.txt  test01-02.txt  test01-03.txt  test02-01.txt  test02.c  test03-01.txt  test03-02.txt  test03.c  test04-01.txt  test05-01.txt  test05-02.txt  test05-03.txt  test05-05.txt  test05.cpp  test06-01.txt  test06-03.txt  test06-04.txt  test07-01.txt  test07-02.txt  test07-03.txt  test07-04.txt  test07-05.txt  test08-01.txt  (+218 more)
(+2 files in other folders)
